--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <h3 class="centered-text">Button Session<h3>
             <br>
             <h6 class="centered-text">Type Number without (+).</h6>
-            <h6 class="centered-text">Marisel Created it</h6>
+            <h6 class="centered-text">Created By Bruce</h6>
             <div class="input-container">
                 <input placeholder="Eg 254xxxxxxxx" type="number" id="number" placeholder="Enter your number(+)." name="">
                 <button id="submit">Enter</button>
